--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+aiofiles==24.1.0
+aiogram==3.17.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+attrs==24.3.0
 certifi==2024.12.14
-charset-normalizer==3.4.1
+frozenlist==1.5.0
 idna==3.10
-pyTelegramBotAPI==4.26.0
-requests==2.32.3
-urllib3==2.3.0
+magic-filter==1.0.12
+multidict==6.1.0
+propcache==0.2.1
+pydantic==2.10.4
+pydantic_core==2.27.2
+setuptools==75.8.0
+typing_extensions==4.12.2
+wheel==0.45.1
+yarl==1.18.3
